# book-advanced

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
bevy-hello/: Cargo.toml
bevy-hello/src/: dragon.rs  main.rs
dragon/: Cargo.toml
dragon/src/: dragon.rs  dragon_assets.rs  dragon_element.rs  game_menus.rs  game_phase.rs  game_state_plugin.rs  main.rs  menu_assets.rs  menu_element.rs  menu_resource.rs  obstacle.rs
my-lib/: Cargo.toml
my-lib/benches/: random.rs
my-lib/src/: game_menus.rs  game_state_plugin.rs  lib.rs  menu_assets.rs  menu_element.rs  menu_resource.rs  random.rs  random_locking.rs  random_plugin.rs
my-lib/src/bevy_assets/: asset_manager.rs  asset_store.rs  asset_type.rs  assets_to_load.rs  loading_menu.rs  mod.rs
my-lib/src/random/: mod.rs
pig/: Cargo.toml
pig/src/: final_score.rs  game_assets.rs  game_element.rs  game_phase.rs  hand_die.rs  hand_timer.rs  main.rs  random.rs  scores.rs
src/: main.rs
