[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the book 'Advanced Hands-On Rust' by Wolverson"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-advanced"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-advanced"
rust-version = "1.91"
version = "0.0.0-SNAPSHOT"

[dependencies]


[profile.dev]
debug = "line-tables-only"

[workspace]
members = ["bevy-hello", "hello"]

[workspace.dependencies]
bevy = "0.17.3"
