[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the book 'Advanced Hands-On Rust' by Wolverson"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "my-lib"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-advanced"
rust-version = "1.91"
version = "0.0.0-SNAPSHOT"

[[bench]]
name = "random"
harness = false

[dependencies]
rand = "0.9.2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
