[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the book 'Advanced Hands-On Rust' by Wolverson"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "pig"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-advanced"
rust-version = "1.93"
version = "0.0.0-SNAPSHOT"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
my-lib = { path = "../my-lib", features = ["locking"] }
